--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>potfolio</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="">
 </head>
 <body>
-  <div#wrap>
+  <div id="wrap">
     <!-- header -->
     <header>
       <div>
@@ -28,7 +31,9 @@
           <p class="close"></p>
         </nav>
       </div>
-      <p id="btn"></p>
+      <p id="btn">
+        <span></span><span></span><span></span><span></span><span></span>
+      </p>
     </header>
     <!-- box01 -->
     <article id="box01">
