--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>potfolio</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/index.css">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="./css/index_media.css">
 </head>
 <body>
   <div id="wrap">
