--- a/index.html
+++ b/index.html
@@ -143,28 +143,36 @@
                 </figure>
                 <figure>
                   <img src="./images/pic02.png" alt="작품2">
-                  <figcaption>work01</figcaption>
+                  <figcaption>work02</figcaption>
                 </figure>
                 <figure>
                   <img src="./images/pic03.png" alt="작품3">
-                  <figcaption>work01</figcaption>
+                  <figcaption>work03</figcaption>
                 </figure>
                 <figure>
                   <img src="./images/pic04.png" alt="작품4">
-                  <figcaption>work01</figcaption>
+                  <figcaption>work04</figcaption>
                 </figure>
                 <figure>
                   <img src="./images/pic01.png" alt="작품1">
-                  <figcaption>work01</figcaption>
+                  <figcaption>work05</figcaption>
                 </figure>
                 <figure>
                   <img src="./images/pic02.png" alt="작품2">
-                  <figcaption>work01</figcaption>
+                  <figcaption>work06</figcaption>
                 </figure>
               </div><!-- all -->
             </div> <!-- show -->
-            <p class="prev">prev</p>
-            <p class="next">next</p>
+            <p class="prev">
+              <span class="material-icons">
+                arrow_back_ios_new
+                </span>
+            </p>
+            <p class="next">
+              <span class="material-icons">
+                arrow_forward_ios
+                </span>
+            </p>
           </div><!--  gallery  -->
       </div>
     </article>
